Account for zoom when computing SVG font size

Account for zoom when computing SVG font size

https://bugs.webkit.org/show_bug.cgi?id=118818

Reviewed by NOBODY (OOPS!).

Merge - https://chromium.googlesource.com/chromium/blink/+/5624c6e475af92d541edc8a3394602e320d00323

Previously, text that was zoomed appeared larger than geometry under the same zoom value. This was caused by two bugs:
1) When setting the computed font size, we incorrectly referenced the computedTextSize instead of the specified size.
2) Text with GeometricPrecision did not set a computed size but instead relied on the text size being correct.

This change addresses both of these issues and adds a test to prove correctness.

* Source/WebCore/rendering/svg/RenderSVGInlineText.cpp
(RenderSVGInlineText::computedNewScaledFontForStyle) - Updated Scaling factor to be accounted into two buckets: 1) GeometricPrecision 2) computedTextSize being referred
* LayoutTests/svg/zoom/text/zoom-text-geometry.html - Added Test Case
* LayoutTests/svg/zoom/text/zoom-text-geometry-expected.html - Added Test Case Expectations
* LayoutTests/svg/text/font-small-enlarged-minimum-larger-expected.svg: Updated Expectations